--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,7 @@
                         <th scope="col">First Name</th>
                         <th scope="col">Last Name</th>
                         <th scope="col">Age</th>
+                        <th colspan="2"></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -26,6 +27,12 @@
                         <td th:text="${student.firstName}"></td>
                         <td th:text="${student.lastName}"></td>
                         <td th:text="${student.age}"></td>
+                        <td>
+                            <a class="btn btn-warning" th:href="@{'/students/' + ${student.studentID} + '/update'}" role="button">Edit</a>
+                        </td>
+                        <td>
+                            <a class="btn btn-danger" th:href="@{'/students/' + ${student.studentID} + '/delete'}" role="button">Delete</a>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
