--- a/src/main/resources/templates/student-create.html
+++ b/src/main/resources/templates/student-create.html
@@ -12,7 +12,7 @@
         <div class="row justify-content-sm-center">
             <div class="col-sm-8">
                 <div class="card text-center mt-5">
-                    <div class="card-header">
+                    <div class="card-header text-white bg-success">
                         Create Student
                     </div>
                     <div class="card-body">
@@ -35,9 +35,9 @@
                                     <input type="number" class="form-control" id="age" th:field="*{age}">
                                 </div>
                             </div>
-                            <div class="form-group row justify-content-sm-end">
+                            <div class="form-group row">
                                 <div class="col-sm-12">
-                                    <button type="submit" class="btn btn-success">Save</button>
+                                    <button type="submit" class="btn btn-success pl-5 pr-5">Save</button>
                                 </div>
                             </div>
                         </form>
