--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,44 +11,16 @@
     <div class="container">
         <div class="row justify-content-sm-center">
             <div class="col-sm-8">
-                <div class="card text-center mt-5">
-                    <div class="card-header text-white bg-primary">
-                        Student List
+                <div class="card text-justify mt-5">
+                    <div class="card-header text-white bg-success text-center">
+                        Action List
                     </div>
-                    <div class="card-body">
-                        <table class="table mt-2">
-                            <thead>
-                            <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">First Name</th>
-                                <th scope="col">Last Name</th>
-                                <th colspan="3"></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:if="${students != null}" th:each="student : ${students}">
-                                <td th:text="${student.studentID}"></td>
-                                <td th:text="${student.firstName}"></td>
-                                <td th:text="${student.lastName}"></td>
-                                <td>
-                                    <a class="btn btn-info" th:href="@{'/students/' + ${student.studentID}}" role="button">View</a>
-                                </td>
-                                <td>
-                                    <a class="btn btn-warning" th:href="@{'/students/' + ${student.studentID} + '/update'}" role="button">Edit</a>
-                                </td>
-                                <td>
-                                    <a class="btn btn-danger" th:href="@{'/students/' + ${student.studentID} + '/delete'}" role="button">Delete</a>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
+                    <div class="card-body ">
+                        <a class="btn btn-block btn-info mr-auto" th:href="@{'/students'}" role="button">Students</a>
+                        <a class="btn btn-block btn-info mr-auto" th:href="@{'/subjects'}" role="button">Subjects</a>
+                        <a class="btn btn-block btn-info mr-auto" th:href="@{'/exams'}" role="button">Exams</a>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row justify-content-sm-end">
-            <div class="col-sm-4">
-                <a class="btn btn-success mt-2" th:href="@{'/students/create'}" role="button">Create student</a>
             </div>
         </div>
     </div>
