--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -13,56 +13,42 @@
             <div class="col-sm-8">
                 <div class="card text-center mt-5">
                     <div class="card-header text-white bg-primary">
-                        Student Info
+                        Student List
                     </div>
                     <div class="card-body">
                         <table class="table mt-2">
                             <thead>
                             <tr>
-                                <th scope="col">Fields</th>
-                                <th scope="col">Data</th>
+                                <th scope="col">#</th>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Last Name</th>
+                                <th colspan="3"></th>
                             </tr>
                             </thead>
-                            <tbody th:if="${student != null}">
-                            <tr>
-                                <td>ID</td>
+                            <tbody>
+                            <tr th:if="${students != null}" th:each="student : ${students}">
                                 <td th:text="${student.studentID}"></td>
-                            </tr>
-                            <tr th:if="${student != null}">
-                                <td>First Name</td>
                                 <td th:text="${student.firstName}"></td>
-                            </tr>
-                            <tr>
-                                <td>Last Nmame</td>
                                 <td th:text="${student.lastName}"></td>
-                            </tr>
-                            <tr>
-                                <td>Age</td>
-                                <td th:text="${student.age}"></td>
-                            </tr>
-                            <tr>
-                                <td>Exams</td>
                                 <td>
-                                    <table class="table mt-1">
-                                        <thead>
-                                        <tr>
-                                            <th scope="col">Subject Name</th>
-                                            <th scope="col">Grade</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody th:if="${student.exams != null}">
-                                        <tr th:each="exam : ${student.exams}">
-                                            <td th:text="${exam.subject.name}"></td>
-                                            <td th:text="${exam.grade}"></td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
+                                    <a class="btn btn-info" th:href="@{'/students/' + ${student.studentID}}" role="button">View</a>
+                                </td>
+                                <td>
+                                    <a class="btn btn-warning" th:href="@{'/students/' + ${student.studentID} + '/update'}" role="button">Edit</a>
+                                </td>
+                                <td>
+                                    <a class="btn btn-danger" th:href="@{'/students/' + ${student.studentID} + '/delete'}" role="button">Delete</a>
                                 </td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row justify-content-sm-end">
+            <div class="col-sm-4">
+                <a class="btn btn-success mt-2" th:href="@{'/students/create'}" role="button">Create student</a>
             </div>
         </div>
     </div>
