--- a/src/main/resources/templates/student-view.html
+++ b/src/main/resources/templates/student-view.html
@@ -26,7 +26,7 @@
                             <tbody th:if="${student != null}">
                             <tr>
                                 <td>ID</td>
-                                <td th:text="${student.studentID}"></td>
+                                <td th:text="${student.id}"></td>
                             </tr>
                             <tr th:if="${student != null}">
                                 <td>First Name</td>
