--- a/src/main/resources/templates/subject-view.html
+++ b/src/main/resources/templates/subject-view.html
@@ -26,7 +26,7 @@
                             <tbody th:if="${subject != null}">
                             <tr>
                                 <td>ID</td>
-                                <td th:text="${subject.subjectID}"></td>
+                                <td th:text="${subject.id}"></td>
                             </tr>
                             <tr>
                                 <td>Name</td>
